# halla_dvcs

./: README.md
TARSWave/: CMakeLists.txt  plot.C  waveform.C
TARSWave/include/: TARSArray.h  TARSBase.h  TARSBlock.h  TARSCalibration.h  TARSCalibration.h~  TARSConst.h  TARSConst.h~  TARSParameters.h  TARSReckon.h  TARSWave.h  TARSWave2.h  TARSWaveLinkDef.h  TARSWaveLinkDef.h~  TDVCSDB.h  TDVCSGlobal.h~  TDVCSGlobal2h  TDouble.h  TDoubleArray.h  TShort.h  TShortArray.h
TARSWave/initdata/: ars.txt  arsbase.txt  calocalib.txt  calogeom.elastic.txt  calogeom.new.txt  calogeom.old.txt  calogeom.shifted.txt  caloparam.txt  dvcsgeom.txt  dvcsparam.txt  listblock.txt  listveto.txt  mysql.conf  npsbase.txt  pacalib.txt  pageom.txt  paparam.txt  pedfile.txt  pro-run169-0.root  prof-09-03-03.root  profile-file  refled.txt  refshape.txt  refshape105.txt  refshapecalo.txt  sigma.txt  vetonum.txt
TARSWave/initdata/CVS/: Entries  Repository  Root
TARSWave/macros/: analysis.C  plot.C  plot_simple.C  skim_tree.C  test_fit.C  wfview.C
TARSWave/source/: #TARSWave.cxx#  .#TARSWave.cxx  TARSArray.cxx  TARSBase.cxx  TARSBase.cxx~  TARSBlock.cxx  TARSCalibration.cxx  TARSConst.cxx  TARSParameters.cxx  TARSWave.cxx  TARSWave.cxx~  TARSWave2.cxx  TDVCSDB.cxx  TDVCSGlobal.cxx  TDoubleArray.cxx
